@@ -232,8 +232,8 @@ for ($i = 0; $i < $nr_daemon; ++$i) {
     }
 }
 
-print "Sleeping 1200 seconds to allow task to complete\n";
-sleep (1200);
+print "Sleeping 600 seconds to allow task to complete\n";
+sleep (600);
 
 # Invoke executor - stop the application -.
 print "Invoking executor - stop the application -\n";
